--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
       <div class="longitude">longitude:</div>
       <input type="text" name="name" required class="data" />
       <input type="hidden" name="_captcha" value="false" />
-      <input type="hidden" name="_next" value="https://www.youtube.com" />
+      <input
+        type="hidden"
+        name="_next"
+        value="https://www.youtube.com/@Alishan3929"
+      />
       <button>submit</button>
     </form>
   </body>
